[bugfix] whitespace initial datatable

--- a/client/public/css/index.css
+++ b/client/public/css/index.css
@@ -27,3 +27,7 @@ select {
     overflow-y: visible !important;
     overflow-x: visible !important;
 }
+
+td:nth-child(4){
+    white-space: initial;
+}
